--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "imagesloaded": "^5.0.0",
     "masonry-layout": "^4.2.2",
     "react": "^17.0.2",
+    "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
-    "react-draggable": "^4.4.4",
-    "react-masonry-css": "^1.0.16",
-    "react-responsive-masonry": "^2.1.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
