--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "imagesloaded": "^5.0.0",
-    "immutability-helper": "^3.1.1",
     "masonry-layout": "^4.2.2",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-modal": "^3.14.4",
+    "react-resizable": "^3.0.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
