--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "html2canvas": "^1.4.1",
     "imagesloaded": "^5.0.0",
     "masonry-layout": "^4.2.2",
     "react": "^17.0.2",
@@ -13,7 +14,6 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-modal": "^3.14.4",
-    "react-resizable": "^3.0.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
